# steiner_trees

./: CMakeLists.txt  gurobi_flags.txt
instances/: example_graph.json  integrality_gap_01.json  test_graph  test_graph.out
instances/directed_cut_based_01/: directed_cut_based_01.json  solution_directed_cut_based_01.json
instances/emc_dual/example_01/: example_01.json  solution_example_01.json
instances/emc_dual/example_02/: example_02.json  solution_example_02.json
instances/emc_dual/example_03/: example_03.json  solution_example_03.json
instances/factory/: terminal_instance_factory.py
instances/factory/factory_instance_01/: instance.json  solution_instance.json
instances/graphs/3_terminals_star/: 3_terminals_star.json  solution_3_terminals_star.json
instances/integrality_gaps/3_terminals_16_15/: 3_terminals_16_15.json  solution.json  solution_3_terminals_16_15.json
instances/integrality_gaps/3_terminals_2k/: 3_terminals_2k.json  solution_3_terminals_2k.json
instances/integrality_gaps/3_terminals_planar/: 3_terminals_planar.json  solution_3_terminals_planar.json
instances/integrality_gaps/3_terminals_planar_01/: 3_terminals_planar_01.json  solution_3_terminals_planar_01.json
instances/integrality_gaps/3_terminals_planar_modified/: 3_terminals_planar_modified.json  solution_3_terminals_planar_modified.json
instances/integrality_gaps/3_terminals_planar_modified_02/: 3_terminals_planar_modified.json  solution_3_terminals_planar_modified.json
instances/integrality_gaps/3_terminals_planar_modified_scheisse/: 3_terminals_planar_modified.json  solution_3_terminals_planar_modified.json
instances/integrality_gaps/complete_graph/: complete_graph.json  complete_graph_org.json  solution_complete_graph.json
instances/integrality_gaps/skutella/: skutella.json  solution_skutella.json
instances/integrality_gaps/test_simplex_embedding_01/: solution_test_simplex_embedding_01.json  test_simplex_embedding_01.json
instances/skutella/instance_01/: instance_01.json  instance_01_solution.json
instances/ucb_3_terminals_01/: solution_ucb_3_terminals_01.json  ucb_3_terminals_01.json
instances/undirected_cut_based/: solution_undirected_cut_based.json  undirected_cut_based.json
instances/undirected_cut_based_01/: solution_undirected_cut_based_01.json  undirected_cut_based_01.json
instances/yannick/example_01/: example_01.json  example_01_solution.json
instances/yannick/example_02/: example_02.json  example_02_solution.json
instances/yannick/example_03/: example_03.json  example_03_original.json  example_03_solution.json
source/: Chronograph.cpp  Chronograph.hpp  Logger.cpp  Logger.hpp  Output.cpp  Output.hpp  Storage.cpp  Storage.hpp  debug.cpp  debug.hpp  json.cpp  json.hpp  main.cpp  python.cpp  python.hpp  skutella.cpp  skutella.hpp  steiner_trees.cpp  steiner_trees.hpp  typedefs.cpp  typedefs.hpp  yannick.cpp  yannick.hpp
source/data/: BinaryHeap.hpp  BitSet.hpp  BitSetEnumerator.hpp  BitSetTable.hpp
source/graph/: Costs.cpp  Costs.hpp  CostsFactory.cpp  CostsFactory.hpp  Edge.cpp  Edge.hpp  Graph.cpp  Graph.hpp  GraphFactory.cpp  GraphFactory.hpp  GraphPrinter.cpp  GraphPrinter.hpp  Net.cpp  Net.hpp  NetsFactory.cpp  NetsFactory.hpp  Node.cpp  Node.hpp  TerminalInstance.cpp  TerminalInstance.hpp  typedefs.cpp  typedefs.hpp
source/graph/algorithms/: Dijkstra.cpp  Dijkstra.hpp  MooreBellmanFord.cpp  MooreBellmanFord.hpp
source/helper/: PowerSetIterator.cpp  PowerSetIterator.hpp  map.cpp  map.hpp  vector.cpp  vector.hpp
source/mip/: Constraint.cpp  Constraint.hpp  Group.cpp  Group.hpp  GroupManager.cpp  GroupManager.hpp  MIP.cpp  MIP.hpp  MIPModel.cpp  MIPModel.hpp  MIPSolver.cpp  MIPSolver.hpp  Solution.cpp  Solution.hpp  Variable.cpp  Variable.hpp  VariableStorage.cpp  VariableStorage.hpp
source/skutella/: GroupSkutella.cpp  GroupSkutella.hpp  PowerSetIterator.cpp  PowerSetIterator.hpp  SkutellaMIP.cpp  SkutellaMIP.hpp  SkutellaMIPFactory.cpp  SkutellaMIPFactory.hpp  SkutellaProblem.cpp  SkutellaProblem.hpp  SkutellaSolution.cpp  SkutellaSolution.hpp  SkutellaSolver.cpp  SkutellaSolver.hpp
source/steiner_trees/: SteinerTreeCut.cpp  SteinerTreeCut.hpp  SteinerTreeProblem.cpp  SteinerTreeProblem.hpp  SteinerTreeSolution.cpp  SteinerTreeSolution.hpp  SteinerTreeSolver.cpp  SteinerTreeSolver.hpp
source/steiner_trees/dijkstra_steiner/: DijkstraSteiner.cpp  DijkstraSteiner.hpp  DijkstraSteinerAlgorithm.hpp  SteinerTreeKey.hpp  SteinerTreeLabel.hpp  SteinerTreeLabelQueue.hpp  SteinerTreeLabelTable.hpp  SteinerTreeLowerBound.hpp  SteinerTreesManager.hpp
source/steiner_trees/mips/: SteinerTreeMIP.cpp  SteinerTreeMIP.hpp  SteinerTreeMIPFactory.cpp  SteinerTreeMIPFactory.hpp
source/steiner_trees/mips/bidirected_cuts_dual/: GroupBidirectedCutsDual.cpp  GroupBidirectedCutsDual.hpp
source/steiner_trees/mips/groups/: GroupBidirectedMultiCommodityCommonFlow.cpp  GroupBidirectedMultiCommodityCommonFlow.hpp
source/steiner_trees/mips/multi_commodity_dual/: GroupMultiCommodityDual.cpp  GroupMultiCommodityDual.hpp
source/steiner_trees/mips/natural_multi_commodity_flow/: GroupCommonFlow.cpp  GroupCommonFlow.hpp  GroupDynamicGraph.cpp  GroupDynamicGraph.hpp  GroupEdges.cpp  GroupEdges.hpp  GroupEdgesMultiCommodityFlow.cpp  GroupEdgesMultiCommodityFlow.hpp  (+4 more)
source/steiner_trees/optimal_integrality_gap/: OptimalEdgeWeights.cpp  OptimalEdgeWeights.hpp  OptimalIntegralityGap.cpp  OptimalIntegralityGap.hpp
source/unit_tests/: test_BitSetEnumerator.cpp  unit_tests.cpp  unit_tests.hpp
source/yannick/: GroupCycle.cpp  GroupCycle.hpp  GroupEdges.hpp  GroupMachine.cpp  GroupMachine.hpp  GroupMachineCycle.cpp  GroupMachineCycle.hpp  GroupTaskCycle.cpp  GroupTaskCycle.hpp  GroupTaskMachine.cpp  GroupTaskMachine.hpp  GroupTaskMachineOrder.cpp  GroupTaskMachineOrder.hpp  GroupTaskPrecedence.cpp  GroupTaskPrecedence.hpp  GroupTaskTime.cpp  GroupTaskTime.hpp  YannickMIP.cpp  YannickMIP.hpp  YannickMIPFactory.cpp  YannickMIPFactory.hpp  YannickProblem.cpp  YannickProblem.hpp  YannickSolution.cpp  YannickSolution.hpp  YannickSolver.cpp  YannickSolver.hpp
(+4 files in other folders)
